# acados_solver_ros2_examples

./: .pre-commit-config.yaml  README.md  acados_solver_ros2_examples.repos
example_acados_bringup/: package.xml  setup.cfg  setup.py
example_acados_bringup/config/: controllers.yaml  layout_plotjuggler.xml
example_acados_bringup/example_acados_bringup/: interactive_cartesian_reference.py  publish_dummy_reference.py
example_acados_bringup/launch/: launch_demo.launch.py
example_acados_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
example_acados_controller/include/: visibility_control.h
example_acados_controller/include/example_acados_controller/: example_acados_controller.hpp  visibility_control.h
example_acados_controller/script/: export_acados_solver_plugin.py  rrbot_model.py
example_acados_controller/src/: example_acados_controller.cpp  example_controller.cpp
example_acados_description/: CMakeLists.txt  package.xml
example_acados_description/ros2_control/: rrbot.ros2_control.xacro
example_acados_description/rviz/: rrbot.rviz
example_acados_description/urdf/: rrbot.urdf.xacro  rrbot_description.urdf.xacro
example_acados_fake_hardware/: CMakeLists.txt  hardware_plugin.xml  package.xml
example_acados_fake_hardware/include/example_acados_fake_hardware/: rrbot.hpp  visibility_control.h
example_acados_fake_hardware/src/: rrbot.cpp
example_robot_description/: CMakeLists.txt  package.xml
example_robot_description/urdf/: rrbot.urdf.xacro
