<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_acados_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for the Acados example application.</description>
  <maintainer email="thibault.poignonec@gmail.com">tpoignonec</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>example_acados_controller</exec_depend>
  <exec_depend>example_acados_description</exec_depend>
  <exec_depend>example_acados_fake_hardware</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>plotjuggler_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
